--- a/chain-calculator/src/App.css
+++ b/chain-calculator/src/App.css
@@ -1,8 +1,11 @@
 .App {
+  display: flex;
   text-align: center;
   width: 100%;
   height: 100vh;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  align-items: center;
+  justify-content: center;
 }
