--- a/chain-calculator/src/components/function-chain/function-chain-styles.css
+++ b/chain-calculator/src/components/function-chain/function-chain-styles.css
@@ -49,8 +49,8 @@
 
 .inputBox::-webkit-inner-spin-button, 
 .inputBox::-webkit-outer-spin-button {
-    -webkit-appearance: none; /* Remove spinners in Chrome, Safari, Edge */
-    margin: 0; /* Remove any extra margin */
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 .outputTitle{
@@ -79,4 +79,13 @@
     display: flex;
     align-items: flex-start;
     align-items: center;
+}
+
+.finalOutput{
+    font-size: 12px;
+    font-weight: 600;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowwrap;
+    margin-left: 20px;
 }
