--- a/chain-calculator/src/components/function-chain/function-chain-styles.css
+++ b/chain-calculator/src/components/function-chain/function-chain-styles.css
@@ -1,3 +1,10 @@
+.wrapper{
+    display: flex;
+    width: 100px;
+    align-items: center;
+    justify-content: center;
+}
+
 .functionChainWrapper{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
